# smold-gemini

./: .env-example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tool_tests.sh  smold.md
docs/: agent.md  bash_tool.md  cd_tool.md  context_manager.md  council.md  council_tool.md  debug_logger.md  edit_tool.md  glob_tool.md  google_genai_model.md  grep_tool.md  ls_tool.md  main.md  powershell_tool.md  replace_tool.md  system_prompt.md  user_input_tool.md  view_tool.md
smold/: __init__.py  agent.py  context_manager.py  council.py  debug_logger.py  google_genai_model.py  run_tool_tests.py  system_message.txt  system_prompt.py
smold/tools/: README.md  __init__.py  bash_tool.py  cd_tool.py  council_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  ls_tool.py  powershell_tool.py  replace_tool.py  user_input_tool.py  view_tool.py
smold/tools/tests/: README.md  __init__.py  conftest.py  run_tests.py  test_bash_tool.py  test_cd_tool.py  test_context.py  test_council_tiktoken.py  test_council_tool.py  test_edit_tool.py  test_glob_tool.py  test_grep_tool.py  test_ls_tool.py  test_powershell_tool.py  test_replace_tool.py  test_view_tool.py
